# learning-first-pass

./: .gitignore  Cargo.toml  flake.nix  generate.sh  main.py  pred.py  pyproject.toml  run.sh  show.py  test.py  training_state.pth  volume.py
src/: camera.rs  hit.rs  hittable.rs  lib.rs  main.rs  material.rs  object.rs  ray.rs  seed.rs  vec3.rs  world.rs
