[package]
name = "learning-first-pass"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.8", features = ["derive"] }
indicatif = "0.17.3"
ndarray = { version = "0.15.6", features = ["serde"] }
num-traits = "0.2.15"
rand = "0.8.5"
rayon = "1.7.0"
serde = "1.0.156"
serde_json = "1.0.94"
