[package]
name = "learning-first-pass"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "sphere_world"
crate-type = ["cdylib"]

[dependencies]
lru = "0.10.0"
ndarray = { version = "0.15.6", features = ["serde"] }
num-traits = "0.2.15"
numpy = "0.18.0"
once_cell = "1.17.1"
pyo3 = { version = "0.18.2", features = ["extension-module"] }
rand = "0.8.5"
rayon = "1.7.0"
serde = "1.0.156"
serde_json = "1.0.94"
