[package]
name = "learning-first-pass"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "cpu_tracer"
crate-type = ["cdylib"]

[dependencies]
itertools = "0.10.5"
ndarray = { version = "0.15.6", features = ["rayon"] }
numpy = "0.18.0"
pyo3 = { version = "0.18.2", features = ["extension-module"] }
rand = "0.8.5"
rayon = "1.7.0"
vecmath = "1.0.0"
